[package]
name = "assistant-core"
version = "0.1.0"
edition = "2021"
description = "Core library for the personal assistant orchestrator"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
ureq = { version = "2", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
toml = "0.8"
rand = "0.8"
